--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aspect",
+  "name": "lagom",
   "version": "1.0.0",
   "description": "Second weekly exercise",
   "main": "index.js",
